src/components/HorizontalBarChart/styles.css
.bar-chart-container {
  margin: 40px;
  width: 35%;
}

.bar-chart-title {
  color: white;
}

.bar-container {
  align-items: center;
  color: white;
  display: flex;
  padding: 3px;
}

.bar-chart-position {
  font-size: 24px;
  padding: 5px 15px;
  width: 20px;
}

.bar-chart-value-container {
  width: 100%;
}

.bar-chart-value {
  background-color: var(--color-green);
  border-radius: 10px;
  font-size: 20px;
  font-weight: 800;
  margin-left: 15px;
  padding: 5px 10px;
  text-align: right;
}

.bar-chart-value-lost {
  background-color: var(--color-red);
}

.bar-chart-display-value {
  font-weight: 800;
  position: absolute;
  padding-left: 80px;
}

